feat: Implement data masking engine for sensitive information
- Introduce a new masking engine to handle sensitive data detection and masking in log entries.
- Update configuration to include email masking and enhance baseline keys.
- Modify log processing pipeline to apply data masking before persistence.
- Add comprehensive tests and documentation for the masking functionality.

--- a/config.yaml
+++ b/config.yaml
@@ -60,8 +60,10 @@ validation:
   max_label_value_length: 64
 
 masking:
-  baseline_keys: ["password", "token", "authorization", "api_key", "secret", "card_number"]
+  baseline_keys: ["password", "token", "authorization", "api_key", "secret", "card_number", "email"]
   partial_rules:
     authorization:
       keep_prefix: 5
+    email:
+      mask_email: true
   tenant_overrides: {}
