--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ starlette==0.48.0
 
 # HTTP client and async file operations
 httpx==0.28.1
+aiohttp>=3.12.0
 
 # Additional FastAPI features
 python-multipart==0.0.20
