fix: Update Loki base URL in configuration
- Change the Loki base URL from localhost to the service URL for improved accessibility within the cluster.
- This update ensures that the logging stack can correctly communicate with the Loki service in the production environment.

--- a/config.yaml
+++ b/config.yaml
@@ -42,7 +42,7 @@ wal:
   flush_endpoint_enabled: true
 
 loki:
-  base_url: "http://localhost:3100"
+  base_url: "http://loki.observability.svc.cluster.local:3100"
   push_endpoint: "/loki/api/v1/push"
   timeout_seconds: 30
   max_retries: 3
